datetime input now working, started working on how to check weather if input <= 5 days ahead

--- a/dublin_bus/dbus/static/dbus/index.css
+++ b/dublin_bus/dbus/static/dbus/index.css
@@ -72,11 +72,11 @@ padding-left: 15px;
 }
 
 #picker {
-    display: none;
+    display: block;
 }
 
-#datetime-local {
-    display: none;
+#dateTime {
+    display: block;
 }
 .post-form {
     padding-top: 80px;
