--- a/dublin_bus/dbus/templates/dbus/index.html
+++ b/dublin_bus/dbus/templates/dbus/index.html
@@ -56,7 +56,7 @@
             Leave Now <input type="checkbox" id="checkbox" onclick="disappear()"><br>
             
       <div id="new"><br>
-         <input type="datetime-local" id="dateTime" data-date-inline-picker="true"/></div>
+         <input type="datetime-local" id="dateTime" data-date-inline-picker="true" pattern="[0-9]{4}/[0-9]{2}/[0-9]{2} [0-9]{2}:[0-9]{2}" min=x max="2017-06-30T16:30" placeholder="YYYY/MM/DD HH:MM" /></div>
             <br>
           <button type = "submit" class = "save btn btn-default">Go</button>
         </form>
@@ -72,7 +72,7 @@
         
        // document.getElementById("dateTime").min = "2018-07-25T00:00:00";
     //     document.getElementById("dateTime").max = "2018-07-29T23:59:59";
- 
+     
               current = new Date();
             c_year = current.getFullYear();
           c_month = current.getMonth() + 1;
@@ -84,8 +84,9 @@
             c_day = "0" + c_day;
         }
           c_hour = current.getHours();
-      document.getElementById("dateTime").min = c_year + "-" + c_month + "-" + c_day + "T" + c_hour + ":00" + ":00";
+       document.getElementById("dateTime").min = c_year + "-" + c_month + "-" + c_day + "T" + c_hour + ":00" + ":00";
       
+        
         
         
         if ((c_month == 9 || c_month == 4 || c_month == 6 ||  c_month == 11) && (c_day<=30 && c_day>=27))  {
@@ -151,7 +152,7 @@
         
         
         
-        
+      
         
         
         
@@ -181,7 +182,6 @@
         function getPredictions(){
         var cBox=document.getElementById("checkbox").checked
         var dTime=new Date(document.getElementById("dateTime").value);
-       
           route = $('input[name="route"]').val();
           start_stop = $('input[name="start"]').val();
           end_stop = $('input[name="end"]').val();
